added functions to json visitor

--- a/given_parser/Makefile
+++ b/given_parser/Makefile
@@ -3,10 +3,9 @@
 # Provided code assumes Java 8
 JAVAC=javac
 JAVA=java
-ANTLRJAR=/home/akeen/public/antlr4/antlr-4.7.1-complete.jar
-JSONJAR=/home/akeen/public/javax.json-1.0.4.jar
+ANTLRJAR=./antlr-4.7.1-complete.jar
 
-CLASSPATH_MOD=$(ANTLRJAR):$(JSONJAR)
+CLASSPATH_MOD=$(ANTLRJAR)
 
 FILES=MiniCompiler.java MiniToJsonVisitor.java MiniToAstDeclarationsVisitor.java MiniToAstExpressionVisitor.java MiniToAstFunctionVisitor.java MiniToAstProgramVisitor.java MiniToAstStatementVisitor.java MiniToAstTypeDeclarationVisitor.java MiniToAstTypeVisitor.java
 
