--- a/vagrant-images/racket-image/Vagrantfile
+++ b/vagrant-images/racket-image/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "hashicorp/precise64"
+  config.vm.box = "ubuntu/artful64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -70,12 +70,12 @@ Vagrant.configure("2") do |config|
 
   # FAIL
   config.vm.provision :shell do |shell|
-    shell.inline = "apt-get install lsb-release;
-                    apt-get -y install ruby;
-                    mkdir -p /etc/puppet/modules;
-                    puppet module install puppetlabs/apt"
+    shell.inline = "apt-get update; apt-get -y install puppet;"
   end
 
-  config.vm.provision "puppet"
+
+  config.vm.provision "puppet" do |puppet|
+    puppet.module_path = "modules"
+  end
 
 end
